[gd_scene load_steps=4 format=3 uid="uid://bcr22jjjwabxf"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_oofuu"]
[ext_resource type="Texture2D" uid="uid://dbt3upuio4pck" path="res://assets/world_misc_objects/door.png" id="1_uxc5x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3faye"]
size = Vector2(14, 4)

[node name="Door" type="Area2D"]
texture_filter = 1
script = ExtResource("1_oofuu")

[node name="door_coll" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3faye")

[node name="door_sprite" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("1_uxc5x")

[node name="trans_time" type="Timer" parent="."]
wait_time = 0.221
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="trans_time" to="." method="_on_trans_time_timeout"]
